# ChangeLog for media-sound/bmpx
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-sound/bmpx/ChangeLog,v 1.42 2006/07/11 13:25:56 chutzpah Exp $

*bmpx-0.20.2 (11 Jul 2006)

  11 Jul 2006; Patrick McLean <chutzpah@gentoo.org> +bmpx-0.20.2.ebuild:
  Version bump, still no neon-0.26 support yet.

  10 Jul 2006; Patrick McLean <chutzpah@gentoo.org> -bmpx-0.20_beta1.ebuild:
  Remove 0.20_beta1 as 0.20 final is out, currently breaks with latest neon
  anyway (bug #139488). Will unmask when neon is SLOT'ed or bmpx is ported to
  neon 0.26.

*bmpx-0.20.1.1 (10 Jul 2006)

  10 Jul 2006; Patrick McLean <chutzpah@gentoo.org> +bmpx-0.20.1.1.ebuild:
  Version bump, will be package.masked until bug #139488 can be sorted out.
  Will try to get neon SLOT'ed. Ebuild submitted by Samuli Suominen.

*bmpx-0.20_beta1 (04 Jul 2006)

  04 Jul 2006; Patrick McLean <chutzpah@gentoo.org> +bmpx-0.20_beta1.ebuild,
  -bmpx-0.20_pre10.ebuild:
  Version bump, add aac USE flag, remove pre10 since portage will see that as
  the newer version. Ebuild submitted by Samuli Suominen.

*bmpx-0.20_pre10 (03 Jul 2006)

  03 Jul 2006; Patrick McLean <chutzpah@gentoo.org> -bmpx-0.20_pre6.ebuild,
  +bmpx-0.20_pre10.ebuild:
  Version bump, clean up old prerelease version. Added USE flag for libnotify
  support and dropped amazon USE flag since the support has been dropped 
  upstream. Add warning at end of ebuild for potential problems with the DBUS
  support. Ebuild contributed by Samuli Suominen.

  26 Jun 2006; Markus Rothe <corsair@gentoo.org> bmpx-0.20_pre6.ebuild:
  Added ~ppc64; bug #138101

*bmpx-0.20_pre6 (25 Jun 2006)

  25 Jun 2006; Patrick McLean <chutzpah@gentoo.org>
  -files/bmpx-0.20_pre1-64bit.patch, -bmpx-0.20_pre1.ebuild,
  +bmpx-0.20_pre6.ebuild:
  Version bump. Updated deps for new version. Drop ppc64 keyword since new dep
  x11-libs/libnotify is not keyworded ppc64. Ebuild contributed by Samuli 
  Suominen.
