@@ -1,0 +1,6 @@
+MD5 ba4b5765de7a643f1c680ba9ca6d6225 bmpx-0.20.3.tar.bz2 1956162
+RMD160 bed16469f29f3fcb8ff5379d25ad1980f42f8bf0 bmpx-0.20.3.tar.bz2 1956162
+SHA256 80b5e5a19c52151ecfc84f880c193b6446f285c8fae42bd3f15053c44bd90361 bmpx-0.20.3.tar.bz2 1956162
+MD5 41eababfa8bad11e9e34e467cdfb86be gentoo_ice-xmms-0.2.tar.bz2 51839
+RMD160 11439cbebf8c6dc5745c8593a79e88303d094544 gentoo_ice-xmms-0.2.tar.bz2 51839
+SHA256 d1be63368b76f4a8b1d5b0e955cd7a77177f56a7f0b828c6603d8fd2836422b1 gentoo_ice-xmms-0.2.tar.bz2 51839
