@@ -1,6 +1,13 @@
 # ChangeLog for media-sound/bmpx
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/bmpx/ChangeLog,v 1.42 2006/07/11 13:25:56 chutzpah Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/bmpx/ChangeLog,v 1.43 2006/07/25 14:29:12 chutzpah Exp $
+
+*bmpx-0.20.3 (25 Jul 2006)
+
+  25 Jul 2006; Patrick McLean <chutzpah@gentoo.org> -bmpx-0.14.4.ebuild,
+  -bmpx-0.20.1.1.ebuild, -bmpx-0.20.2.ebuild, +bmpx-0.20.3.ebuild:
+  Version bump, update neon dep, drop older versions to make sure we won't get
+  the neon upgrade/downgrade cycle anymore.
 
 *bmpx-0.20.2 (11 Jul 2006)
 
